2009-05-17  Jürg Billeter  <j@bitron.ch>

	Vala: Use $(srcdir) in rebuild rules.
	valac is always run in srcdir as the generated files are distributed.
	So srcdir needs to be taken into account in the rebuild rules to not
	wrongly trigger a rebuild in the wrong directory.
	* automake.in (lang_vala_finish_target): Rebuild files in
	$(srcdir).
	* tests/vala2.test: Test rebuild rules from VPATH build.

	Vala: Add and test rebuild rules for generated header and vapi files.
	valac will generate additional files when using, for example, -H in
	VALAFLAGS. We need to recognize these options and add appropriate
	rebuild rules to fix parallel build.
	* automake.in (lang_vala_finish_target): Recognize -H, -h,
	--header, --internal-header, --vapi, --internal-api, --gir flags
	to valac and rebuild rules for generated headers; distribute
	and maintainer-clean them.
	* tests/vala2.test: Test rebuild rules.

2009-05-17  Jürg Billeter  <j@bitron.ch>
	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Vala: Fix build when using per-target VALAFLAGS.
	This does not yet implement full per-target support for VALAFLAGS,
	however, this change at least fixes building when there is only one
	target per source file, which is the most common situation.
	* automake.in: Remove `VALAFLAGS' from `flags' in language struct.
	(lang_vala_finish_target): Handle `*_VALAFLAGS rewriting' manually
	here; check `VALAFLAGS' user variables.
	* tests/Makefile.am (XFAIL_TESTS): Remove vala5.test.
	* doc/automake.texi (Vala Support): Document per-target flag
	limitations.

2009-05-11  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	For PR automake/540:
	Document some formatting restrictions for Makefile.am files.
	* doc/automake.texi (General Operation, Usage of Conditionals):
	Variable assignments should not be indented by TABs, rule commands
	should.  Conditional keyword statements should not be indented.
	* THANKS: Update.
	Report by Luo Yi.

2009-05-03  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
