@@ -6611,7 +6611,8 @@ the @code{_LDFLAGS} variable for the program.
 
 Automake provides initial support for Vala
 (@uref{http://www.vala-project.org/}).
-This requires valac version 0.7.0 or later.
+This requires valac version 0.7.0 or later, and currently requires
+the user to use GNU @command{make}.
 
 @example
 foo_SOURCES = foo.vala bar.vala zardoc.c
