@@ -21,7 +21,7 @@
 
 # Test to make sure compiling Vala code really works with non-recursive make.
 
-required="libtool libtoolize pkg-config valac gcc"
+required="libtool libtoolize pkg-config valac gcc GNUmake"
 . ./defs || Exit 1
 
 set -e
