@@ -21,7 +21,7 @@
 
 # Test per-target flags, expected to fail.
 
-required="libtool libtoolize pkg-config valac gcc"
+required="libtool libtoolize pkg-config valac gcc GNUmake"
 . ./defs || Exit 1
 
 set -e
