@@ -1,3 +1,11 @@
+2009-05-17  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	Vala: for now, require GNU make.
+	* doc/automake.texi (Vala Support): GNU make is currently
+	required for Vala sources.
+	* tests/vala2.test, tests/vala3.test, tests/vala5.test: Require
+	GNU make.
+
 2009-05-17  Jürg Billeter  <j@bitron.ch>
 
 	Vala: Use $(srcdir) in rebuild rules.
